Fixes text overflow problem in chat header.

--- a/styles/components/_layout.scss
+++ b/styles/components/_layout.scss
@@ -10,6 +10,7 @@
 
   & > * {
     flex: 0 1 auto; // children won't grow, but will shrink
+    min-width: 0; // prevent children with long text from causing an overflow
   }
 
   &.reverse {
